fix for pull quote date wrapping on phone

--- a/app/styles/responsive.less
+++ b/app/styles/responsive.less
@@ -585,7 +585,7 @@
     }
   }
   .pullquote {
-    width:82%;
+    width:84%;
     padding:5%;
     blockquote {
       .font-size(18);
@@ -595,6 +595,10 @@
     span, em {
       .font-size(11);
       line-height: 1;
+    }
+    span {
+      margin-left: 0;
+      padding-left: 4px;
     }
     &:after {
       display: none;
